icpc2021programs/reference/F-islands/F-islands.err
..\icpc2021programs\reference\F-islands\F-islands.cpp: In function 'int main()':
..\icpc2021programs\reference\F-islands\F-islands.cpp:64:19: error: expected unqualified-id before '[' token
         for (auto [x, _] : poly) mxx = max(mxx, x);
                   ^
..\icpc2021programs\reference\F-islands\F-islands.cpp:64:19: error: expected ';' before '[' token
..\icpc2021programs\reference\F-islands\F-islands.cpp:64:20: error: 'x' was not declared in this scope
         for (auto [x, _] : poly) mxx = max(mxx, x);
                    ^
..\icpc2021programs\reference\F-islands\F-islands.cpp:64:23: error: '_' was not declared in this scope
         for (auto [x, _] : poly) mxx = max(mxx, x);
                       ^
..\icpc2021programs\reference\F-islands\F-islands.cpp: In lambda function:
..\icpc2021programs\reference\F-islands\F-islands.cpp:64:26: error: expected '{' before ':' token
         for (auto [x, _] : poly) mxx = max(mxx, x);
                          ^
..\icpc2021programs\reference\F-islands\F-islands.cpp: In function 'int main()':
..\icpc2021programs\reference\F-islands\F-islands.cpp:64:26: error: expected ';' before ':' token
..\icpc2021programs\reference\F-islands\F-islands.cpp:64:26: error: expected primary-expression before ':' token
..\icpc2021programs\reference\F-islands\F-islands.cpp:64:26: error: expected ')' before ':' token
..\icpc2021programs\reference\F-islands\F-islands.cpp:64:26: error: expected primary-expression before ':' token
